--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ body {
   /*display: flex;*/
   justify-content: space-around;
   align-items: center;
-  margin: auto
+  margin: auto;
+  position: relative;
 }
 
 /*.sidebar-container {
@@ -33,11 +34,13 @@ body {
 
 .sidebar-container{
   background-color: #424d57;
-  width: 100%;
-  height: 75px;
+  width: 150px;
+  height: 100%;
   margin: 0;
+  margin-top: 0;
   align-items: center;
   justify-content: space-around;
+  float: left;
 }
 
 .account-sidebar, .lead-sidebar, .log-sidebar, .appointment-sidebar {
@@ -45,18 +48,23 @@ body {
   color: white;
   text-decoration: none;
   text-transform: uppercase;
-  display: inline-block;
+  display: block;
+  margin-top: 25px;
 }
 
 h2 {
   color: #6e8091;
   margin-top: 15px;
   margin-bottom: 15px;
+  text-transform: uppercase;
 }
 
 .account-container, .lead-container, .calls-container, .appointment-container {
-  margin-top: 20px;
+  position: relative;
   margin-bottom: 45px;
+  padding-top: 75px;
+  padding-left: 30px;
+
 }
 
 .lead-to-account {
